--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"clean": "rm dist/bundle.js",
 		"start": "parcel",
 		"build-prod": "parcel build src/index.html",
-		"test": "jest"
+		"test": "jest",
+		"deploy": "gh-pages -d dist"
 	},
 	"repository": {
 		"type": "git",
@@ -37,6 +38,7 @@
 		"eslint-plugin-jsx-a11y": "^6.5.1",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-simple-import-sort": "^7.0.0",
+		"gh-pages": "^5.0.0",
 		"jest": "^28.1.0",
 		"parcel": "^2.6.0",
 		"ts-jest": "^28.0.4",
